<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SensorActivity" >

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dip"
        android:text="@string/sensor_information"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    	<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/proximity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/proximity_in_cm_"/>
		    
		    <TextView 
		        android:id="@+id/proximityDist"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/accelX"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/accelerometer_x_axis_in_m_sec2"/>
		    
		    <TextView 
		        android:id="@+id/accelXval"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>
	    
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/accelY"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/accelerometer_y_axis_in_m_sec2"/>
		    
		    <TextView 
		        android:id="@+id/accelYval"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/accelZ"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/accelerometer_z_axis_in_m_sec2"/>
		    
		    <TextView 
		        android:id="@+id/accelZval"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/temp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/temp_in_celcius"/>
		    
		    <TextView 
		        android:id="@+id/tempVal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <TextView 
		        android:id="@+id/light"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/light_in_lux"/>
		    
		    <TextView 
		        android:id="@+id/lightVal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_gravity="right"
		        android:layout_weight="1"
		        android:text="@string/unavailable"
		        android:textColor="@android:color/holo_green_light"/>
		    
	    </LinearLayout>

</LinearLayout>
